--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
             一起吃个饭或喝杯热饮，聊聊天？
         </div>
         <div class="card-actions">
-            <button class="btn-accept" type="button" onclick="alert('周末见。')">确认赴约</button>
+            <button class="btn-accept" type="button" onclick="alert('那么就约个时间吧～。')">确认赴约</button>
             <button class="btn-close" id="close-card" type="button">先收起</button>
         </div>
     </div>
